force-app/main/default/objects/COM__c/COM__c.object-meta.xml
<CustomObject>
    <label>COM</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commissioner&apos;s Office Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>