force-app/main/default/objects/COM__c/fields/PTR_Abstract__c.field-meta.xml
<CustomField>
    <fullName>PTR_Abstract__c</fullName>
    <label>PTR_Abstract</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>