force-app/main/default/objects/COM__c/fields/PTR_ArticleTitle__c.field-meta.xml
<CustomField>
    <fullName>PTR_ArticleTitle__c</fullName>
    <label>PTR_ArticleTitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>