force-app/main/default/objects/COM__c/fields/PTR_Authors__c.field-meta.xml
<CustomField>
    <fullName>PTR_Authors__c</fullName>
    <label>PTR_Authors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>