force-app/main/default/objects/COM__c/fields/PTR_AuthorsComments__c.field-meta.xml
<CustomField>
    <fullName>PTR_AuthorsComments__c</fullName>
    <label>PTR_AuthorsComments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>