force-app/main/default/objects/COM__c/fields/PTR_ConferenceTitle__c.field-meta.xml
<CustomField>
    <fullName>PTR_ConferenceTitle__c</fullName>
    <label>PTR_ConferenceTitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>