force-app/main/default/objects/COM__c/fields/PTR_CurrentReviewer__c.field-meta.xml
<CustomField>
    <fullName>PTR_CurrentReviewer__c</fullName>
    <label>PTR_CurrentReviewer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>