force-app/main/default/objects/COM__c/fields/PTR_FirstAuthorCode__c.field-meta.xml
<CustomField>
    <fullName>PTR_FirstAuthorCode__c</fullName>
    <label>PTR_FirstAuthorCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>