force-app/main/default/objects/COM__c/fields/PTR_IsNeverSubmitted__c.field-meta.xml
<CustomField>
    <fullName>PTR_IsNeverSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PTR_IsNeverSubmitted</label>
    <type>Checkbox</type>
</CustomField>