force-app/main/default/objects/COM__c/fields/PTR_PriorApprovalReceived__c.field-meta.xml
<CustomField>
    <fullName>PTR_PriorApprovalReceived__c</fullName>
    <label>PTR_PriorApprovalReceived</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received Institutional Review Board (IRB) Approval</fullName>
            </value>
            <value>
                <fullName>Did Not Require Institutional Review Board (IRB) Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>