force-app/main/default/objects/COM__c/fields/PTR_ProjectType__c.field-meta.xml
<CustomField>
    <fullName>PTR_ProjectType__c</fullName>
    <label>PTR_ProjectType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case study/report</fullName>
            </value>
            <value>
                <fullName>Commentary/editorial</fullName>
            </value>
            <value>
                <fullName>Original research – design</fullName>
            </value>
            <value>
                <fullName>Original research – findings (do not include program evaluation)</fullName>
            </value>
            <value>
                <fullName>Outbreak investigation</fullName>
            </value>
            <value>
                <fullName>Program or policy overview/description</fullName>
            </value>
            <value>
                <fullName>Program/policy evaluation</fullName>
            </value>
            <value>
                <fullName>Review/meta-analysis</fullName>
            </value>
            <value>
                <fullName>Tools for public health (methods, guidance)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>