force-app/main/default/objects/COM__c/fields/PTR_ProjectTypeOther__c.field-meta.xml
<CustomField>
    <fullName>PTR_ProjectTypeOther__c</fullName>
    <label>PTR_ProjectTypeOther</label>
    <length>255</length>
    <type>Text</type>
</CustomField>