force-app/main/default/objects/COM__c/fields/PTR_PTR_tblReviewer_Current__c.field-meta.xml
<CustomField>
    <fullName>PTR_PTR_tblReviewer_Current__c</fullName>
    <label>PTR_PTR_tblReviewer_Current</label>
    <length>255</length>
    <type>Text</type>
</CustomField>