force-app/main/default/objects/COM__c/fields/PTR_PublicationType__c.field-meta.xml
<CustomField>
    <fullName>PTR_PublicationType__c</fullName>
    <label>PTR_PublicationType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manuscript</fullName>
            </value>
            <value>
                <fullName>Abstract</fullName>
            </value>
            <value>
                <fullName>Magazine Article</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Book Chapter</fullName>
            </value>
            <value>
                <fullName>Book</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>