force-app/main/default/objects/COM__c/fields/PTR_ReassignToUser__c.field-meta.xml
<CustomField>
    <fullName>PTR_ReassignToUser__c</fullName>
    <label>PTR_ReassignToUser</label>
    <length>255</length>
    <type>Text</type>
</CustomField>