force-app/main/default/objects/COM__c/fields/PTR_ReviewerByOutsideDOHMH__c.field-meta.xml
<CustomField>
    <fullName>PTR_ReviewerByOutsideDOHMH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PTR_ReviewerByOutsideDOHMH</label>
    <type>Checkbox</type>
</CustomField>