force-app/main/default/objects/COM__c/fields/PTR_StudyDesignOther__c.field-meta.xml
<CustomField>
    <fullName>PTR_StudyDesignOther__c</fullName>
    <label>PTR_StudyDesignOther</label>
    <length>255</length>
    <type>Text</type>
</CustomField>