force-app/main/default/objects/COM__c/fields/PTR_SubmissionDeadline__c.field-meta.xml
<CustomField>
    <fullName>PTR_SubmissionDeadline__c</fullName>
    <label>PTR_SubmissionDeadline</label>
    <type>Date</type>
</CustomField>