force-app/main/default/objects/COM__c/fields/PTR_TargetPublication__c.field-meta.xml
<CustomField>
    <fullName>PTR_TargetPublication__c</fullName>
    <label>PTR_TargetPublication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>