force-app/main/default/objects/COM__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PTR_PublicationType__c</columns>
    <columns>PTR_TargetPublication__c</columns>
    <columns>PTR_ConferenceTitle__c</columns>
    <columns>PTR_SubmissionDeadline__c</columns>
    <columns>PTR_ArticleTitle__c</columns>
    <columns>PTR_Authors__c</columns>
    <columns>PTR_Abstract__c</columns>
    <columns>PTR_AuthorsComments__c</columns>
    <columns>PTR_ReviewerByOutsideDOHMH__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>